--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.66.0",
+    "@vercel/kv": "^3.0.0",
     "antd": "^5.21.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
