--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recoil": "^0.7.7",
     "styled-components": "^6.1.15",
     "uuid": "^11.0.5",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
