--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
     "@eslint/eslintrc": "^3",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
@@ -40,6 +41,8 @@
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
+    "msw": "^2.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
